--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -22,3 +22,20 @@ select,
 textarea {
     max-width: 280px;
 }
+.navbar-inverse 
+{
+    background-color: #ff0000;
+    border-color: #808080;
+}
+.navbar-inverse .navbar-nav > li > a
+{
+    color:white;
+}
+.navbar-inverse .navbar-brand 
+{
+    color:white;
+}
+.coure 
+{
+    
+}    
