--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -35,7 +35,23 @@ textarea {
 {
     color:white;
 }
-.coure 
+.course
 {
-    
-}    
+    list-style: none;
+}
+.course > li{
+    position: relative;
+    margin-bottom: 30px;
+}
+.course > li .date {
+    text-align: center;
+    background-color: #ff0000;
+    color: white;
+    width: 60px;
+    border-radius: 8px;
+}
+.course > li .details{
+    position: absolute;
+    top:0;
+    left: 70px;
+}     
