--- a/WebApplication2/Content/Site.css
+++ b/WebApplication2/Content/Site.css
@@ -54,4 +54,12 @@ textarea {
     position: absolute;
     top:0;
     left: 70px;
+}
+.course > li.action {
+    display: none;
+    left: 70px;
+    position: absolute;
+}
+.course > li:hover .action{
+    display: block;
 }     
