--- a/WebApplication2/Views/Courses/Attending.cshtml
+++ b/WebApplication2/Views/Courses/Attending.cshtml
@@ -1,9 +1,13 @@
 ﻿@model WebApplication2.ViewModels.CoursesViewModel
 @using Microsoft.AspNet.Identity;
 @using WebApplication2.Models;
+
+
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Attending";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>Attending</h2>
 <div class="row">
     <ul>
         @foreach (var course in Model.UpcommingCourses)
@@ -35,7 +39,7 @@
                     {
                         <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerId">Follow</button>
                     }
-                   
+
                 </span>
                 <span class="category">
                     @course.Category.Name
@@ -44,7 +48,7 @@
                 {
                     <button data-course-id="@course.Id" class="btn btn-default btn-sm js-toggle-attendance">Going?</button>
                 }
-                
+
             </div>
         </li>
     }
@@ -80,7 +84,7 @@
 
     </script>
 }
-<div class="jumbotron">
+@*<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -104,6 +108,6 @@
     <div class="col-md-4">
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>*@
     </div>
 </div>
